[package]
name = "storage-server"
edition = "2021"
version.workspace = true

[dependencies]
dbuf-storage = { path = "../dbuf-storage" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0.0"
rand = "0.8"
sled = "0.34.7"
actix-web = "4.3"
actix-rt = "2.8"
clap = "4.5.37"
env_logger = "0.11.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full", "macros"] }
tempfile = "3.3"
uuid = { version = "1.16.0", features = ["v4"] }
